<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/notes_list_item"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="0dp"

    android:orientation="vertical">

    <com.mcxtzhang.swipemenulib.SwipeMenuLayout
        android:id="@+id/swipeMenuLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true">

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:orientation="vertical">
            <RelativeLayout
                android:id="@+id/title_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="8dp">


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/title_tag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/mine"
                    android:gravity="left"
                    android:orientation="horizontal"
                    app:showDividerHorizontal="end"
                    tools:listitem="@layout/recyc_notelist_item_tag" />

                <ImageButton
                    android:id="@+id/mine"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginStart="8dp"
                    android:layout_toStartOf="@+id/is_public"
                    android:background="@drawable/ic_mine"
                    android:gravity="center"
                    android:contentDescription="@string/me" />

                <ImageButton
                    android:id="@+id/is_public"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="4dp"

                    android:gravity="center"
                    android:contentDescription="@string/public_rb" />
            </RelativeLayout>

            <TextView
                android:id="@+id/content_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:textColor="#5d5d5d"
                android:textSize="14dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dip"
                android:layout_marginTop="6dp"
                android:background="#ecedee" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/right"
            android:layout_width="56dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/delete_note_item"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#DC663E"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/delete_note_item"
                android:textColor="#ffffff" />
        </LinearLayout>
    </com.mcxtzhang.swipemenulib.SwipeMenuLayout>

</LinearLayout>